utilities/inspector/assets/main.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Typography */
body {
	font-size: 100%;
	line-height: 1.5;
	color: #333;
}
body {
	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
}
h1, a.dump, .message a.backtrace, .message a.context, pre, code, kbd, var {
	font-family: Consolas, "Lucida Console", Monaco, monospace;
}

/* 
	Layout
*/
body {
	background: #ccc;
}
.log > li:after {
	display: block;
	clear: both;
	content: "";
}

/* 
	Links
*/
a {
	line-height: 1.20;
	border-bottom: 1px dotted;
	margin-bottom: -1px;
	text-decoration: none;
}
a.active {
	border-bottom-style: solid;
}

/* 
	Log
*/
section {
	padding-top: 3em;
}
section:first-child {
	padding-top: 1.5em;
}
h1 {
	margin-bottom: 0.6em;
	padding: 0 10px;
	font-size: 1.25em;
	line-height: 1.2;
	color: #333;
	text-shadow: 0 1px 1px rgba(255,255,255,0.8);
}
h1 .document {
	display: none;
}
h1 .iframe, h1 .ajax, h1 .time {
	float: left;
	margin-top: 0.2em;
	font-size: .7em;
	line-height: 1.7143;
	color: #666;
	text-shadow: 0 1px 1px rgba(255,255,255,0.8);
}
h1 .iframe, h1 .ajax {
	margin-right: 0.5em
}
h1 .time {
	float: right
}
.log {
	background: #fff;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
}
.log > li {
	margin-top: -1px;
	border-top: 1px solid #ddd;
}
.log > li:first-child {
	margin-top: 0;
	border-top: 0;
}

/*
	Messages
*/
.message {
	padding: 0.75em 10px;
	color: #444;
}
.message a.dump {
	color: #666;
}
.message a.backtrace, .message a.context {
	float: right;
	margin-top: 0.75em;
	margin-left: 0.5em;
	font-size: 0.75em;
	line-height: 1;
	color: #666;
}
.notice {
	color: #214c88;
}
.warning {
	color: #969625;
}
.error, .exception {
	color: #a02727;
}

/* 
	Source
*/
.source {
	display: block;
	overflow: hidden;
	border-bottom: 0;
	padding-top: 0.5em;
	color: #666;
	font-size: 0.75em;
	line-height: 1.5;
	text-decoration: none;
}
.source kbd {
	display: block;
	overflow: hidden;
	white-space: nowrap;
}
.source:hover, .source:focus {
	text-decoration: underline;
}
.message .source {
	display: block;
}
ol.backtrace .source {
	color: #aaa;
}

/* 
	Metrics
*/
table {
	margin-left: -1px ;
	margin-top: -0.75em;
	border-left: 1px solid #ddd;
	color: #555;
	font-size: 0.75em;
	line-height: 2;
	text-decoration: none;
}
table td {
	padding: 0.5em 10px;
}
table {
	margin-right: 1em;
	float: left;	
}
table .metric {
	min-width: 5em;
	color: #666;
	text-transform: none;
}
table .absolute, table .relative {
	min-width: 5em;
	text-align: right;
}

/* 
	Dumps
*/
a.dump {
	display: inline-block;
	color: inherit;
}
pre.dump {
	overflow: hidden;
	padding: 1em 10px;
	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
	background: #333;
	color: #eee;
	font-size: 0.75em;
	line-height: 2;
	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
	white-space: pre-wrap;
}
ol.backtrace pre.dump {
	padding-left: 30px;
	padding-right: 10px;
	margin: 0 -10px 0 -30px;
	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
}
var, .message > a.dump  {
	color: #33812d;
}

/* 
	Backtrace
*/
ol.backtrace {
	overflow: hidden;
	padding: 0 10px 0 30px;
	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
	background: #3f3f3f;
	color: #eee;
	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
}
ol.backtrace > li {
	margin-top: 0.5em;
	counter-increment: backtrace -1;
	position: relative;
}
ol.backtrace > li:before {
	content: counter(backtrace) '.';
	display: block;
	width: 20px;
	position: absolute;
	top: 0.1667em;
	left: -25px;
	font-size: 0.75em;
	line-height: 2;
	text-align: right;
}
pre.code {
	margin-bottom: 0.5em;
	font-size: 0.75em;
	line-height: 2;
	white-space: pre-wrap;
}
ol.backtrace > li pre.code:first-child {
	padding-top: 0.25em;
}


/* Temp */
pre.dump, ol.backtrace {
	display: none;
}
h1 small.time {
	display: inline;
}
pre.dump.visible, ol.backtrace.visible {
	display: block;
}

a.active {
	text-decoration: none;
}
.message > a.active {
	color: #111;
}

